--- a/modern-business/style-rtl.css
+++ b/modern-business/style-rtl.css
@@ -1955,6 +1955,10 @@ footer .wp-block-a8c-navigation-menu .sub-menu {
   margin-left: auto;
 }
 
+.fse-enabled .site-header .wp-block-image.alignfull {
+  max-width: inherit;
+}
+
 .site-branding {
   color: #686868;
   display: flex;
