--- a/modern-business/style.css
+++ b/modern-business/style.css
@@ -1961,6 +1961,10 @@ footer .wp-block-a8c-navigation-menu .sub-menu {
   margin-right: auto;
 }
 
+.fse-enabled .site-header .wp-block-image.alignfull {
+  max-width: inherit;
+}
+
 .site-branding {
   color: #686868;
   display: flex;
